[project]
name = "repo-claude-web"
version = "0.1.0"
description = "Browser frontend for RepoClaude (WebSocket bridge + static SPA)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "websockets>=12.0",
]

[project.scripts]
# 启动 Web Bridge
repo-web-bridge = "web.bridge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridge"]
